043 ==> 453244 - 7.6.0 Appimage crashes on Ubuntu 22.04.
044 ==> 453249 - Face regions get lost when the file is renamed.
045 ==> 453418 - Color Profile Default Locations not Correct.
046 ==> 453516 - Crash on Inkscape svg file in Exiv2.
047 ==> 453611 - Showfoto main window freeze and crash at startup.
048 ==> 453617 - Add "Ignore face" button for unrecongised faces in thumbnail view.
049 ==> 453707 - Resizing and then ignoring recognised face ignores the original rectangle and resizes the rectangle for the suggested face.
050 ==> 453817 - digiKam does not detect hugin software as it is now provided as a flatpack, and no more as a classic ppa.
051 ==> 453905 - Network Mounts are not functional.
052 ==> 453888 - Exiftool display of a malformed tag.
053 ==> 453899 - Ccache not detected at digikam git compilation.
054 ==> 453417 - Color Management not working properly.
055 ==> 453965 - Showfoto crashed while parsing image metadata with Image Magick.
056 ==> 454090 - Prevent computer from sleeping after playing some videos.
057 ==> 362023 - Extremely slow metadata writing via maintenance.
058 ==> 454279 - Appimage not starting.
059 ==> 444265 - The plugin MediaWiki crashes by uploading an image.
060 ==> 454537 - RAW DNG image file (from Adobe Lightroom) with color space conversion to sSRG IEC61966-2.1 and converted to TIFF cannot be read.
061 ==> 454770 - Progress bar shows checkmark.
062 ==> 454766 - Importing an album uses only a single thread.
063 ==> 454768 - Progress bar is useless.
064 ==> 454796 - 7.6.0 AppImage fails to start on Ubuntu 22.04 "symbol lookup error: /lib/x86_64-linux-gnu/libgio-2.0.so.0".
065 ==> 454844 - Cannot read a JPEG produced by Photoshop and acceptable to LightRoom.
066 ==> 454831 - Sort photos by shooting date.
067 ==> 454882 - Requirements for MySQL Server omit USER.
068 ==> 454873 - Problems with lensfun and batch.
069 ==> 454978 - Search for camera maker does not yield results for certain photos.
070 ==> 