@@ -379,7 +379,6 @@ SearchField* SearchField::createField(const QString& name, SearchFieldGroup* con
         {
             QString shortName = make[i];
             ItemPropertiesTab::shortenedMakeInfo(shortName);
-            shortName         = shortName.trimmed();
             makeMap.insert(shortName, wildcard.arg(shortName));
         }
 
@@ -410,7 +409,6 @@ SearchField* SearchField::createField(const QString& name, SearchFieldGroup* con
         {
             QString shortName = model[i];
             ItemPropertiesTab::shortenedModelInfo(shortName);
-            shortName         = shortName.trimmed();
             modelMap.insert(shortName, model[i]);
         }
 
